fixing up background image scaling issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,8 @@ footer {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: 100%;
+  width: 100%;
 }
 
 a {
